# FGmods

./: LICENSE  README.md  encrypt.py
FgMods/: gradle.properties  settings.gradle
FgMods/.acside/editor/: openedFiles.json.bak
FgMods/app/: build.gradle
FgMods/app/src/main/: AndroidManifest.xml
FgMods/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.cpp.bak
FgMods/app/src/main/java/fg/fgmods/key/: MainActivity.java  NativeNetHelper.java  NativePrefsHelper.java  fgmods.java
FgMods/app/src/main/res/values/: strings.xml
